--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -126,7 +126,7 @@
           </div>
           <div class="flex justify-between mb-2">
             <span>Shipping</span>
-            <span>Rs {{ shippingFee }}</span>
+            <span>Rs {{ shippingFee * cartItemProducts.length }}</span>
           </div>
           <hr class="my-2" />
           <div class="flex justify-between mb-2">
