--- a/src/app/new-product/new-product.component.html
+++ b/src/app/new-product/new-product.component.html
@@ -1,4 +1,4 @@
-<section class="bg-gray-100 pt-4 pb-16">
+<section class="bg-gray-100 h-full pt-4 pb-16">
   <div class="mx-auto w-full px-6">
     <h1 class="text-2xl text-dark-blue font-bold mb-8">Latest Products</h1>
 
@@ -78,9 +78,9 @@
               <p class="text-sm font-medium text-dark-blue cursor-auto">
                 Rp {{ newProduct.priceInPKR }}
               </p>
-              <del>
+              <!-- <del>
                 <p class="text-sm text-gray-500 cursor-auto ml-2">Rp 199</p>
-              </del>
+              </del> -->
               <div class="ml-auto">
                 <mat-icon
                   class="cursor-pointer"
