--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,47 +1,47 @@
-<div class="flex flex-col py-16 gap-36 bg-gray-100">
+<div class="flex flex-col py-16 bg-gray-100">
   @if(productRes$ | async;) {
   <div class="bg-gray-100 px-6">
-    <div class="flex gap-16 grid-flow-col px-9 pt-10">
+    <button
+      (click)="onBack()"
+      class="flex flex-row items-center text-gray-600 hover:text-gray-500 space-x-1 mb-5"
+    >
+      <svg
+        class="fill-stroke"
+        width="14"
+        height="14"
+        viewBox="0 0 14 14"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M2.91681 7H11.0835"
+          stroke="currentColor"
+          stroke-width="0.666667"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        />
+        <path
+          d="M2.91681 7L5.25014 9.33333"
+          stroke="currentColor"
+          stroke-width="0.666667"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        />
+        <path
+          d="M2.91681 7.00002L5.25014 4.66669"
+          stroke="currentColor"
+          stroke-width="0.666667"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        />
+      </svg>
+      <p class="text-sm leading-none">Back</p>
+    </button>
+    <div class="flex gap-8 pt-10">
       <div class="w-1/2">
-        <button
-          (click)="onBack()"
-          class="flex flex-row items-center text-gray-600 hover:text-gray-500 space-x-1 mb-5"
-        >
-          <svg
-            class="fill-stroke"
-            width="14"
-            height="14"
-            viewBox="0 0 14 14"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M2.91681 7H11.0835"
-              stroke="currentColor"
-              stroke-width="0.666667"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            />
-            <path
-              d="M2.91681 7L5.25014 9.33333"
-              stroke="currentColor"
-              stroke-width="0.666667"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            />
-            <path
-              d="M2.91681 7.00002L5.25014 4.66669"
-              stroke="currentColor"
-              stroke-width="0.666667"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            />
-          </svg>
-          <p class="text-sm leading-none">Back</p>
-        </button>
-        <div class="lg:col-span-3 w-full h-1/2 lg:sticky top-0 text-center">
+        <div class="lg:col-span-3 w-full h-1/2 top-0 text-center">
           <div
-            class="px-4 py-10 rounded-lg h-full shadow-[0_2px_10px_-3px_rgba(6,81,237,0.3)] relative"
+            class="rounded-lg h-full shadow-[0_2px_10px_-3px_rgba(6,81,237,0.3)] relative"
           >
             <img
               [src]="selectedImage"
@@ -86,7 +86,7 @@
               aria-label="Example shopping_cart icon"
               fontIcon="shopping_cart"
             ></mat-icon>
-            Update cart
+            Add to cart
           </button>
         </div>
       </div>
@@ -95,7 +95,7 @@
   }
 
   <div class="flex justify-between">
-    <div class="flex bg-white h-fit px-8 py-16 mx-6 w-2/5 rounded-md gap-2">
+    <div class="flex bg-white h-fit px-8 mx-6 w-2/5 rounded-md gap-2">
       @if(reviewLoading) {
       <div class="flex bg-transparent items-center gap-2 justify-between">
         <app-bar-spinner></app-bar-spinner>
@@ -104,7 +104,7 @@
       <form
         (submit)="onSaveReview(reviewForm)"
         #reviewForm="ngForm"
-        class="flex flex-col w-full gap-5"
+        class="flex flex-col py-8 w-full gap-5"
       >
         <h1 class="text-2xl text-dark-blue font-bold">Add a review</h1>
 
@@ -160,9 +160,17 @@
     </div>
 
     <div
-      class="flex flex-col gap-10 bg-white h-fit px-8 py-16 mx-6 w-2/5 rounded-md"
+      class="flex flex-col gap-10 bg-white h-fit px-8 py-8 mx-6 w-2/5 rounded-md"
     >
-      @for(review of reviews; track review.id;) {
+      @if(reviews.length === 0) {
+      <h1 class="text-2xl text-dark-blue font-bold">
+        This product has no reviews!
+      </h1>
+
+      } @else {
+      <h1 class="text-2xl text-dark-blue font-bold">All reviews</h1>
+
+      } @for(review of reviews; track review.id;) {
       <div
         class="flex flex-col border-b py-2 max-w-full overflow-y-auto overflow-x-hidden border-gray-500 gap-3"
       >
