--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -23,8 +23,12 @@
       </div>
     </div>
 
-    <div class="flex flex-col gap-5 bg-white p-6 rounded-lg w-fit">
-      <h2 class="text-2xl font-bold text-dark-blue">Account Details</h2>
+    <div class="flex flex-col bg-white pl-6 pr-6 pb-6 pt-3 rounded-lg w-fit">
+      <h2 class="text-2xl mb-3 font-bold text-blue-800">
+        Welcome {{ user?.userName }}
+      </h2>
+
+      <h2 class="text-2xl mb-2 font-bold text-dark-blue">Account Details</h2>
 
       @if(loading) {
       <div class="flex bg-transparent items-center gap-2 justify-between">
