--- a/src/app/account/orders/orders.component.html
+++ b/src/app/account/orders/orders.component.html
@@ -2,7 +2,10 @@
 <div class="flex bg-transparent items-center gap-2 justify-between">
   <app-bar-spinner></app-bar-spinner>
 </div>
-} @else { @for(order of orders; track order.id; let i = $index) {
+} @else { @if(orders.length === 0) {
+<p class="text-dark-gray font-medium text-lg">No orders yet!</p>
+
+} @for(order of orders; track order.id; let i = $index) {
 <div class="flex items-center py-2 border-b border-gray-500">
   <div class="flex flex-col justify-center w-1/4">
     @if(order.fullfilled !== 'delivered' ) { @if(order.fullfilled === 'pending')
@@ -10,54 +13,60 @@
     <button
       (click)="onCancelOrder(order.id, i)"
       type="button"
-      class="mx-2 my-2 mt-4 w-fit bg-red-600 transition duration-150 ease-in-out hover:bg-red-500 rounded-lg text-white px-6 py-2 text-base"
+      class="mx-2 my-2 mt-4 w-fit bg-red-600 transition duration-150 ease-in-out hover:bg-red-500 rounded-lg text-white text-base px-3 py-1 lg:px-6 lg:py-2"
     >
       Cancel
     </button>
-    <p class="font-bold text-gray-400 mt-5 text-base">To be shipped...</p>
+    <p class="font-bold text-gray-400 mt-5 text-sm lg:text-base">
+      To be shipped...
+    </p>
     } @else {
     <button
       (click)="onCancelOrder(order.id, i)"
       type="button"
-      class="mx-2 my-2 mt-4 w-fit bg-red-600 transition duration-150 ease-in-out hover:bg-red-500 rounded-lg text-white px-6 py-2 text-base"
+      class="mx-2 my-2 mt-4 w-fit bg-red-600 transition duration-150 ease-in-out hover:bg-red-500 rounded-lg text-white text-base px-3 py-1 lg:px-6 lg:py-2"
     >
       Cancel
     </button>
     <a
       (click)="onTrackOrder(order.id)"
       type="button"
-      class="cursor-pointer mx-2 my-2 w-fit bg-orange-400 transition duration-150 ease-in-out hover:bg-orange-600 rounded-lg text-white px-6 py-2 text-base"
+      class="cursor-pointer mx-2 my-2 w-fit bg-orange-400 transition duration-150 ease-in-out hover:bg-orange-600 rounded-lg text-white text-base px-3 py-1 lg:px-6 lg:py-2"
     >
       Track
     </a>
     } } @if(order.fullfilled == 'delivered' && order.paid) {
-    <p class="text-base font-medium text-green-500">Paid and delivered</p>
+    <p class="text-sm font-medium text-green-500 lg:text-base">
+      Paid and delivered
+    </p>
     }
   </div>
   <div class="flex flex-col w-1/2">
-    <p class="text-2xl leading-tight font-bold text-gray-400">
+    <p class="text-xl leading-tight font-bold text-gray-400 lg:text-2xl">
       {{ order.createdAt }}
     </p>
-    <p class="font-medium mt-2 leading-tight text-lg text-dark-gray">
+    <p
+      class="font-medium mt-2 leading-tight text-dark-gray text-base lg:text-lg"
+    >
       {{ order.firstName + " " + order.lastName }}
     </p>
-    <p class="font-medium leading-tight text-lg text-dark-gray">
+    <p class="font-medium leading-tight text-dark-gray text-base lg:text-lg">
       {{ order.emailAddress }}
     </p>
-    <p class="font-medium leading-tight text-lg text-dark-gray">
+    <p class="font-medium leading-tight text-dark-gray text-base lg:text-lg">
       {{ order.phoneNumber }}
     </p>
-    <p class="font-medium leading-tight text-lg text-dark-gray">
+    <p class="font-medium leading-tight text-dark-gray text-base lg:text-lg">
       {{ order.address1 }}
     </p>
-    <p class="font-medium leading-tight text-lg text-dark-gray">
+    <p class="font-medium leading-tight text-dark-gray text-base lg:text-lg">
       {{ order.country + " " + order.city + " " + order.postalCode }}
     </p>
   </div>
   <div class="flex flex-col justify-center w-1/3">
     @for(productInfo of order.productInfo; track productInfo.productName;) {
-    <p class="text-lg text-dark-blue font-medium">
-      <span class="font-medium text-lg text-gray-300">
+    <p class="text-dark-blue font-medium text-base lg:text-lg">
+      <span class="font-medium text-gray-300 text-base lg:text-lg">
         {{ productInfo.quantity + "x" }}</span
       >
       {{ productInfo.productName }}
