--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -9,12 +9,12 @@
 
     <div>
       <div class="flex gap-5 items-center">
-        <h2 class="text-3xl pl-6 text-dark-blue font-bold">
+        <h2 class="text-xl pl-6 text-dark-blue font-bold lg:text-2xl">
           {{ categoriesProduct.category.categoryName }}
         </h2>
         <p
           (click)="onShowCategory(categoriesProduct.category)"
-          class="cursor-pointer font-medium text-lg text-gray-300 underline hover:text-dark-gray"
+          class="cursor-pointer font-medium text-base text-gray-300 underline hover:text-dark-gray lg:text-lg"
         >
           Show all
         </p>
@@ -44,14 +44,37 @@
               <div
                 (mouseenter)="onMouseEnter(product.id)"
                 (mouseleave)="onMouseLeave(product.id)"
-                class="w-56 bg-white shadow-md rounded-xl duration-500 hover:scale-105 hover:shadow-xl"
+                class="w-44 bg-white shadow-md rounded-xl duration-500 hover:scale-105 hover:shadow-xl lg:w-56"
               >
                 <div class="relative">
                   <img
-                    src="Organic.svg"
+                    [src]="product.productImages[0]"
                     alt="Product"
-                    class="h-52 w-72 object-cover rounded-t-xl"
+                    class="h-42 w-52 object-cover rounded-t-xl lg:h-52 lg:w-72"
                   />
+
+                  <!-- <button
+                    [disabled]="loading"
+                    class="absolute top-1 left-1 cursor-pointer bg-gray-100 px-3 pt-3 pb-1 rounded-md hover:px-4 hover:pt-4 hover:pb-2"
+                  >
+                    @if(wishedProducts.includes(product.id)) {
+                    <mat-icon
+                      (click)="onRemoveFromWhishlist(product.id)"
+                      aria-hidden="false"
+                      aria-label="Example close icon"
+                      fontIcon="close"
+                      class="w-3 h-3"
+                    ></mat-icon>
+                    } @else {
+                    <mat-icon
+                      (click)="onAddToWhishlist(product.id)"
+                      aria-hidden="false"
+                      aria-label="Example favorite icon"
+                      fontIcon="favorite"
+                      class="w-3 h-3"
+                    ></mat-icon>
+                    }
+                  </button> -->
                   @if(iconsShowing.has(product.id)) {
 
                   <div
@@ -107,19 +130,16 @@
                     <p
                       routerLink="/cart"
                       (click)="onViewProduct(product.id)"
-                      class="cursor-pointer text-base font-semibold text-dark-blue truncate block capitalize"
+                      class="cursor-pointer text-sm font-semibold text-dark-blue truncate block capitalize lg:text-base"
                     >
                       {{ product.productName }}
                     </p>
                     <div class="flex items-center">
-                      <p class="text-sm font-medium text-dark-blue cursor-auto">
+                      <p
+                        class="text-xs font-medium text-dark-blue cursor-auto lg:text-sm"
+                      >
                         Rp {{ product.priceInPKR }}
                       </p>
-                      <!-- <del>
-                        <p class="text-sm text-gray-500 cursor-auto ml-2">
-                          Rp 199
-                        </p>
-                      </del> -->
                       <div class="ml-auto">
                         <mat-icon
                           class="cursor-pointer"
@@ -137,11 +157,11 @@
 
               <div
                 (click)="onShowCategory(categoriesProduct.category)"
-                class="cursor-pointer flex items-center w-56 h-[271px] bg-gray-300 shadow-md rounded-xl duration-500 hover:scale-105 hover:shadow-xl"
+                class="cursor-pointer flex items-center w-44 h-[235px] bg-gray-300 shadow-md rounded-xl duration-500 hover:scale-105 hover:shadow-xl lg:w-56 lg:h-[271px]"
               >
                 <p
                   (click)="onShowCategory(categoriesProduct.category)"
-                  class="cursor-pointer font-medium mx-auto text-lg text-white hover:text-gray-100"
+                  class="cursor-pointer font-medium mx-auto text-base text-white hover:text-gray-100 lg:text-lg"
                 >
                   Show all
                 </p>
