--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -2,3 +2,21 @@
   font-weight: 700;
   color: #ffff;
 }
+
+.active-link-mobile {
+  font-weight: 700;
+  color: #2e4374;
+}
+
+.overlay-content {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 0%;
+  background-color: rgb(243 244 246);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
