--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,11 @@
-<header class="flex bg-dark-gray py-2 px-6 items-center justify-between">
-  <a routerLink="/" class="cursor-pointer text-3xl text-light"
+<header
+  class="sticky z-30 flex bg-dark-gray py-2 px-6 justify-between items-center w-full"
+>
+  <a routerLink="/" class="cursor-pointer text-2xl text-light"
     >HOUSE OF DRYFRUITS</a
   >
 
-  <div class="flex gap-6">
+  <div class="hidden gap-6 lg:flex">
     <a
       [routerLinkActiveOptions]="{ exact: true }"
       routerLinkActive="active-link"
@@ -39,5 +41,63 @@
       class="cursor-pointer font-medium text-lg text-light"
       >Cart ({{ cartItemsCount }})</a
     >
+  </div>
+
+  <button
+    [ngStyle]="isMenuOpen ? { color: 'black' } : { color: 'white' }"
+    class="flex text-white z-50 items-center justify-between w-16 burger lg:hidden"
+    (click)="toggleIcon()"
+  >
+    <i class="w-full h-full material-icons">
+      {{ isMenuOpen ? "close" : "menu" }}</i
+    >
+  </button>
+
+  <div
+    class="flex flex-col w-screen items-start overlay-content"
+    [@expandContent]="state"
+  >
+    <nav class="flex flex-col text-dark-purple gap-6">
+      <a
+        [routerLinkActiveOptions]="{ exact: true }"
+        routerLinkActive="active-link-mobile"
+        routerLink="/"
+        (click)="toggleIcon()"
+        class="cursor-pointer font-medium text-base hover:text-dark-blue"
+        >Home</a
+      >
+      <a
+        [routerLinkActiveOptions]="{ exact: true }"
+        routerLinkActive="active-link-mobile"
+        routerLink="/products"
+        (click)="toggleIcon()"
+        class="cursor-pointer font-medium text-base hover:text-dark-blue"
+        >All products</a
+      >
+      <a
+        [routerLinkActiveOptions]="{ exact: true }"
+        routerLinkActive="active-link-mobile"
+        routerLink="/categories"
+        (click)="toggleIcon()"
+        class="cursor-pointer font-medium text-base hover:text-dark-blue"
+        >Categories</a
+      >
+      <a
+        [routerLinkActiveOptions]="{ exact: true }"
+        routerLinkActive="active-link-mobile"
+        routerLink="/account"
+        (click)="toggleIcon()"
+        class="cursor-pointer font-medium text-base hover:text-dark-blue"
+        >Account</a
+      >
+      <a
+        [routerLinkActiveOptions]="{ exact: true }"
+        routerLinkActive="active-link-mobile"
+        routerLink="/cart"
+        (click)="toggleIcon()"
+        class="cursor-pointer font-medium text-lg hover:text-dark-blue"
+        >Cart ({{ cartItemsCount }})</a
+      >
+    </nav>
   </div>
 </header>
