--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -37,7 +37,9 @@
       </svg>
       <p class="text-sm leading-none">Back</p>
     </button>
-    <div class="flex gap-8 pt-10">
+    <div
+      class="flex flex-col items-center gap-8 pt-10 lg:flex-row lg: justify-start"
+    >
       <div class="w-1/2">
         <div class="lg:col-span-3 w-full h-1/2 top-0 text-center">
           <div
@@ -66,19 +68,25 @@
         </div>
       </div>
 
-      <div class="flex w-1/2 flex-col gap-5">
-        <h1 class="text-4xl text-dark-blue font-bold">
+      <div
+        class="flex text-center w-10/12 flex-col gap-5 lg:text-start lg:w-1/2"
+      >
+        <h1 class="text-2xl text-dark-blue font-bold lg:text-3xl">
           {{ product?.productName }}
         </h1>
-        <p class="font-medium text-gray-600">{{ product?.description }}</p>
-        <div class="flex items-center gap-5">
-          <p class="text-xl font-bold text-dark-blue cursor-auto my-3">
+        <p class="font-medium text-gray-600">
+          {{ product?.description }}
+        </p>
+        <div class="flex mx-auto items-center gap-5 lg:mx-0">
+          <p
+            class="text-lg font-bold text-dark-blue cursor-auto my-3 lg:text-xl"
+          >
             Rp {{ product?.priceInPKR }}
           </p>
 
           <button
             (click)="onAddToCart(product!.id)"
-            class="flex items-center rounded gap-3 text-base text-white px-3 py-2 bg-green-700 transition duration-150 ease-in-out hover:bg-green-600"
+            class="flex items-center rounded gap-3 text-base text-white px-2 py-1 bg-green-700 transition duration-150 ease-in-out hover:bg-green-600 lg:px-3 lg:py-2"
           >
             <mat-icon
               class="cursor-pointer"
@@ -94,8 +102,10 @@
   </div>
   }
 
-  <div class="flex justify-between">
-    <div class="flex bg-white h-fit px-8 mx-6 w-2/5 rounded-md gap-2">
+  <div class="flex flex-col justify-between pt-10 lg:flex-row">
+    <div
+      class="flex bg-white h-fit px-8 mx-6 w-11/12 rounded-md gap-2 lg:w-2/5"
+    >
       @if(reviewLoading) {
       <div class="flex bg-transparent items-center gap-2 justify-between">
         <app-bar-spinner></app-bar-spinner>
@@ -106,7 +116,9 @@
         #reviewForm="ngForm"
         class="flex flex-col py-8 w-full gap-5"
       >
-        <h1 class="text-2xl text-dark-blue font-bold">Add a review</h1>
+        <h1 class="text-xl text-dark-blue font-bold lg:text-2xl">
+          Add a review
+        </h1>
 
         <div class="flex gap-2">
           @for(reviewStar of reviewStars; track reviewStar; let i = $index) {
@@ -114,7 +126,7 @@
 
           <button (click)="onChangeReview(i)" type="button">
             <img
-              class="h-8 w-8"
+              class="w-6 h-6 lg:h-8 lg:w-8"
               src="favourites-filled-star-symbol-svgrepo-com.svg"
               alt=""
             />
@@ -123,7 +135,11 @@
           }@else {
 
           <button (click)="onChangeReview(i)" type="button">
-            <img class="h-8 w-8" src="star-svgrepo-com.svg" alt="" />
+            <img
+              class="w-6 h-6 lg:h-8 lg:w-8"
+              src="star-svgrepo-com.svg"
+              alt=""
+            />
           </button>
           } }
         </div>
@@ -134,7 +150,7 @@
             ngModel
             name="title"
             #title="ngModel"
-            class="border text-base font-medium text-dark-blue border-gray-100 w-1/2 rounded px-3 py-2"
+            class="border text-base font-medium text-dark-blue border-gray-100 w-1/2 rounded px-2 py-1 lg:px-3 lg:py-2"
             type="text"
             placeholder="Title"
           />
@@ -143,7 +159,7 @@
             ngModel
             #comment="ngModel"
             name="comment"
-            class="border text-base font-medium text-dark-blue w-2/3 border-gray-100 rounded px-3 py-2"
+            class="border text-base font-medium text-dark-blue w-2/3 border-gray-100 rounded px-2 py-1 lg:px-3 lg:py-2"
             placeholder="Was it good? Pros? Cons?"
           ></textarea>
         </div>
@@ -151,7 +167,7 @@
           [disabled]="reviewForm.invalid"
           [ngClass]="reviewForm.invalid ? 'invalid-save' : 'valid-save'"
           type="submit"
-          class="mx-2 my-2 w-1/2 bg-green-700 transition duration-150 ease-in-out hover:bg-green-600 rounded-lg text-white px-4 py-1 text-base"
+          class="mx-2 my-2 w-1/2 bg-green-700 transition duration-150 ease-in-out hover:bg-green-600 rounded-lg text-base text-white px-2 py-1 lg:px-4 lg:py-1"
         >
           Submit your review
         </button>
@@ -160,15 +176,15 @@
     </div>
 
     <div
-      class="flex flex-col gap-10 bg-white h-fit px-8 py-8 mx-6 w-2/5 rounded-md"
+      class="flex flex-col mt-10 gap-10 bg-white h-fit px-8 py-8 mx-6 w-11/12 lg:w-2/5 rounded-md"
     >
       @if(reviews.length === 0) {
-      <h1 class="text-2xl text-dark-blue font-bold">
+      <p class="text-dark-gray font-medium text-lg">
         This product has no reviews!
-      </h1>
+      </p>
 
       } @else {
-      <h1 class="text-2xl text-dark-blue font-bold">All reviews</h1>
+      <h1 class="text-xl text-dark-blue font-bold lg:text-2xl">All reviews</h1>
 
       } @for(review of reviews; track review.id;) {
       <div
@@ -181,7 +197,7 @@
 
             <button (click)="onChangeReview(i)" type="button">
               <img
-                class="h-6 w-6"
+                class="w-4 h-4 lg:h-6 lg:w-6"
                 src="favourites-filled-star-symbol-svgrepo-com.svg"
                 alt=""
               />
@@ -190,18 +206,26 @@
             }@else {
 
             <button (click)="onChangeReview(i)" type="button">
-              <img class="h-6 w-6" src="star-svgrepo-com.svg" alt="" />
+              <img
+                class="w-4 h-4 lg:h-6 lg:w-6"
+                src="star-svgrepo-com.svg"
+                alt=""
+              />
             </button>
             } }
           </div>
 
-          <p class="text-lg leading-tight font-bold text-gray-400">
+          <p class="text-sm leading-tight font-bold text-gray-400 lg:text-base">
             {{ review.createdAt }}
           </p>
         </div>
         <div class="flex flex-col gap-5">
-          <p class="text-gray-700 font-bold text-2xl">{{ review.title }}</p>
-          <p class="text-gray-500 font-bold text-lg">{{ review.comment }}</p>
+          <p class="text-gray-700 font-bold text-xl lg:text-2xl">
+            {{ review.title }}
+          </p>
+          <p class="text-gray-500 font-bold text-base lg:text-lg">
+            {{ review.comment }}
+          </p>
         </div>
       </div>
 
