--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,6 +1,8 @@
 <section class="flex bg-gray-100 h-full pt-4">
   <div class="flex flex-col mx-auto w-full px-6">
-    <h1 class="text-2xl text-dark-blue font-bold mb-4">All Products</h1>
+    <h1 class="text-xl text-dark-blue font-bold mb-4 lg:text-2xl">
+      All Products
+    </h1>
     @if(loading) {
     <div class="flex bg-transparent items-center gap-2 justify-between">
       <app-bar-spinner></app-bar-spinner>
@@ -11,14 +13,36 @@
       <div
         (mouseenter)="onMouseEnter(product.id)"
         (mouseleave)="onMouseLeave(product.id)"
-        class="w-56 bg-white shadow-md rounded-xl duration-500 hover:scale-105 hover:shadow-xl"
+        class="w-44 bg-white shadow-md rounded-xl duration-500 hover:scale-105 hover:shadow-xl lg:w-56"
       >
         <div class="relative">
           <img
-            src="Organic.svg"
+            [src]="product.productImages[0]"
             alt="Product"
-            class="h-52 w-72 object-cover rounded-t-xl"
+            class="h-42 w-52 object-cover rounded-t-xl lg:h-52 lg:w-72"
           />
+          <!-- <div
+            class="opacity-100 absolute top-1 left-1 cursor-pointer bg-gray-100 px-3 pt-3 pb-1 rounded-md hover:px-4 hover:pt-4 hover:pb-2 lg:opacity-0"
+          >
+            @if(wishedProducts.includes(product.id)) {
+            <mat-icon
+              (click)="onRemoveFromWhishlist(product.id)"
+              aria-hidden="false"
+              aria-label="Example close icon"
+              fontIcon="close"
+              class="w-3 h-3"
+            ></mat-icon>
+            } @else {
+            <mat-icon
+              (click)="onAddToWhishlist(product.id)"
+              aria-hidden="false"
+              class="w-3 h-3"
+              aria-label="Example favorite icon"
+              fontIcon="favorite"
+            ></mat-icon>
+            }
+          </div> -->
+
           @if(iconsShowing.has(product.id)) {
 
           <div class="cursor-pointer icons-container" [@showHideIcons]="state">
@@ -70,17 +94,16 @@
             <p
               routerLink="/cart"
               (click)="onViewProduct(product.id)"
-              class="cursor-pointer text-base font-semibold text-dark-blue truncate block capitalize"
+              class="cursor-pointer text-sm font-semibold text-dark-blue truncate block capitalize lg:text-base"
             >
               {{ product.productName }}
             </p>
             <div class="flex items-center">
-              <p class="text-sm font-medium text-dark-blue cursor-auto">
+              <p
+                class="text-xs font-medium text-dark-blue cursor-auto lg:text-sm"
+              >
                 Rp {{ product.priceInPKR }}
               </p>
-              <!-- <del>
-                <p class="text-sm text-gray-500 cursor-auto ml-2">Rp 199</p>
-              </del> -->
               <div class="ml-auto">
                 <mat-icon
                   class="cursor-pointer"
