--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,14 +1,64 @@
 <div class="flex bg-gray-100 h-full items-center justify-between">
   <div class="bg-white mx-auto p-5 rounded-lg grid gap-14">
     <h1 class="text-4xl font-bold text-center text-dark-blue">
+      @if(mode === 'forgotPassword') { Change passowrd } @else {
+
       {{ mode === "login" ? "Login" : "Signup" }}
+      }
     </h1>
     <form
       (submit)="onAuth(authForm)"
       #authForm="ngForm"
       class="space-y-6 text-white"
     >
-      @if(mode == 'signup') {
+      @if(mode === 'forgotPassword' ) {
+      <div class="relative">
+        <input
+          ngModel
+          required
+          email=""
+          #userName="ngModel"
+          name="emailAddress"
+          type="email"
+          placeholder="Email Address"
+          class="w-80 bg-gray-100 text-dark-blue py-2 px-12 rounded-full focus:bg-black-dark focus:outline-none focus:ring-1 focus:ring-neon-blue focus:drop-shadow-lg"
+        />
+      </div>
+      <div class="relative">
+        <input
+          ngModel
+          required
+          #userName="ngModel"
+          name="previousPassword"
+          type="password"
+          placeholder="Previous Password"
+          class="w-80 bg-gray-100 text-dark-blue py-2 px-12 rounded-full focus:bg-black-dark focus:outline-none focus:ring-1 focus:ring-neon-blue focus:drop-shadow-lg"
+        />
+      </div>
+      <div class="relative">
+        <input
+          ngModel
+          required
+          #userName="ngModel"
+          name="newPassword"
+          type="password"
+          placeholder="New Password"
+          class="w-80 bg-gray-100 text-dark-blue py-2 px-12 rounded-full focus:bg-black-dark focus:outline-none focus:ring-1 focus:ring-neon-blue focus:drop-shadow-lg"
+        />
+      </div>
+      <div class="relative">
+        <input
+          ngModel
+          required
+          #userName="ngModel"
+          name="confirmPassword"
+          type="password"
+          placeholder="confirm Password"
+          class="w-80 bg-gray-100 text-dark-blue py-2 px-12 rounded-full focus:bg-black-dark focus:outline-none focus:ring-1 focus:ring-neon-blue focus:drop-shadow-lg"
+        />
+      </div>
+
+      } @else { @if(mode == 'signup') {
       <div class="relative">
         <div
           class="absolute top-0.5 left-1 rounded-full p-2 flex items-center justify-center text-dark-blue"
@@ -84,21 +134,40 @@
           class="w-80 bg-gray-100 text-dark-blue py-2 px-12 rounded-full focus:bg-black-dark focus:outline-none focus:ring-1 focus:ring-neon-blue focus:drop-shadow-lg"
         />
       </div>
+      }
+
       <div class="flex items-center gap-2 justify-between">
+        @if(mode === 'forgotPassword') {
+        <button
+          type="button"
+          [disabled]="authForm.invalid"
+          (click)="onChangePassword(authForm)"
+          class="bg-gradient-to-r from-blue-400 to-cyan-200 w-full hover:to-cyan-500 font-semibold rounded-full py-2"
+        >
+          Change
+        </button>
+        } @else {
         <button
           type="submit"
+          [disabled]="authForm.invalid"
           class="bg-gradient-to-r from-blue-400 to-cyan-200 w-full hover:to-cyan-500 font-semibold rounded-full py-2"
         >
           {{ mode == "login" ? "Login" : "Signup" }}
         </button>
-        @if(loading) {
-        <div>
+        } @if(loading) {
+        <div class="text-dark-gray">
           <app-load-spinner></app-load-spinner>
         </div>
         }
       </div>
     </form>
     <div class="border-t border-white-light pt-4 space-y-4 text-sm">
+      <p
+        (click)="onForgotPassword()"
+        class="text-dark-blue cursor-pointer hover:text-gray-300"
+      >
+        Forgot password?
+      </p>
       <p (click)="onChangeMode()" class="text-dark-blue">
         {{
           mode == "login"
