--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,57 +1,61 @@
-<div class="flex flex-col py-6 px-6">
-  <h1 class="text-xl text-dark-blue font-bold mb-8 lg:text-2xl">Contact us</h1>
+<div class="flex flex-col bg-gray-100 h-full py-6 px-6">
+  <div class="bg-white w-11/12 rounded-md p-6 lg:w-1/2">
+    <h1 class="text-xl text-dark-blue font-bold mb-8 lg:text-2xl">
+      Contact us
+    </h1>
 
-  <form
-    (submit)="onContact(contactUsForm)"
-    #contactUsForm="ngForm"
-    class="flex flex-col gap-4"
-  >
-    <div class="flex flex-col gap-2">
-      <label for="name">Name</label>
-      <input
-        id="name"
-        ngModel
-        required
-        #userName="ngModel"
-        name="userName"
-        type="text"
-        placeholder="User Name"
-        class="w-80 bg-gray-100 text-dark-blue py-2 px-12 rounded-full focus:bg-black-dark focus:outline-none focus:ring-1 focus:ring-neon-blue focus:drop-shadow-lg"
-      />
-    </div>
-    <div class="flex flex-col gap-2">
-      <label for="emailAddress">Email</label>
-      <input
-        id="emailAddress"
-        ngModel
-        required
-        email
-        #emailAddress="ngModel"
-        name="emailAddress"
-        type="Emaul Address"
-        placeholder="User Name"
-        class="w-80 bg-gray-100 text-dark-blue py-2 px-12 rounded-full focus:bg-black-dark focus:outline-none focus:ring-1 focus:ring-neon-blue focus:drop-shadow-lg"
-      />
-    </div>
-    <div class="flex flex-col gap-2">
-      <label for="message">Message</label>
-      <textarea
-        id="message"
-        required
-        ngModel
-        #message="ngModel"
-        name="message"
-        class="border text-base font-medium text-dark-blue w-1/2 border-gray-100 rounded px-2 py-1 lg:px-3 lg:py-2"
-        placeholder="Message"
-      ></textarea>
-    </div>
-    <button
-      [disabled]="contactUsForm.invalid"
-      [ngClass]="contactUsForm.invalid ? 'invalid-save' : 'valid-save'"
-      type="submit"
-      class="mx-2 my-2 w-fit bg-green-700 transition duration-150 ease-in-out hover:bg-green-600 rounded-lg text-base text-white px-2 py-1 lg:px-4 lg:py-1"
+    <form
+      (submit)="onContact(contactUsForm)"
+      #contactUsForm="ngForm"
+      class="flex flex-col gap-4"
     >
-      Submit your response
-    </button>
-  </form>
+      <div class="flex flex-col gap-2">
+        <label for="name">Name</label>
+        <input
+          id="name"
+          ngModel
+          required
+          #userName="ngModel"
+          name="userName"
+          type="text"
+          placeholder="User Name"
+          class="w-80 bg-gray-100 text-dark-blue rounded-full focus:bg-black-dark focus:outline-none focus:ring-1 focus:ring-neon-blue py-2 px-6 focus:drop-shadow-lg lg:py-2 lg:px-12"
+        />
+      </div>
+      <div class="flex flex-col gap-2">
+        <label for="emailAddress">Email</label>
+        <input
+          id="emailAddress"
+          ngModel
+          required
+          email
+          #emailAddress="ngModel"
+          name="emailAddress"
+          type="Emaul Address"
+          placeholder="User Name"
+          class="w-80 bg-gray-100 text-dark-blue rounded-full focus:bg-black-dark focus:outline-none focus:ring-1 focus:ring-neon-blue py-2 px-6 focus:drop-shadow-lg lg:py-2 lg:px-12"
+        />
+      </div>
+      <div class="flex flex-col gap-2">
+        <label for="message">Message</label>
+        <textarea
+          id="message"
+          required
+          ngModel
+          #message="ngModel"
+          name="message"
+          class="border text-base font-medium text-dark-blue w-11/12 border-gray-100 rounded px-2 py-1 lg:px-3 lg:py-2 lg:w-1/2"
+          placeholder="Message"
+        ></textarea>
+      </div>
+      <button
+        [disabled]="contactUsForm.invalid"
+        [ngClass]="contactUsForm.invalid ? 'invalid-save' : 'valid-save'"
+        type="submit"
+        class="mx-2 my-2 w-fit bg-green-700 transition duration-150 ease-in-out hover:bg-green-600 rounded-lg text-base text-white px-2 py-1 lg:px-4 lg:py-1"
+      >
+        Submit your response
+      </button>
+    </form>
+  </div>
 </div>
